fixed spacing issue

--- a/style1.css
+++ b/style1.css
@@ -3,9 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-html, body {
-  overflow-x: hidden; /* prevent horizontal scroll */
+html,
+body {
+  overflow-x: hidden;
+  /* prevent horizontal scroll */
 }
+
 /* Navbar */
 .navbar {
   background-color: #CDE7F7;
@@ -191,9 +194,10 @@ html, body {
   background-color: #fff; 
   padding: 5px;         
 } */
- .card-img{
+.card-img {
   z-index: 2;
- }
+}
+
 .card-content {
   flex-grow: 1;
   display: flex;
@@ -204,40 +208,46 @@ html, body {
   border-top-right-radius: 25px;
   border-bottom-right-radius: 25px;
   position: absolute;
-  left:80px;
-  padding:0px 20px 0 50px;
+  left: 80px;
+  padding: 0px 20px 0 50px;
   width: 100%;
+  min-height: 144.17px;
 }
 
 .speaker-desc {
   font-family: 'Roboto Condensed', sans-serif;
-  font-size:17px;
+  font-size: 15px;
   /* Same size for all */
   line-height: 1.4;
   color: #000;
-  margin-bottom: 0px!important;
+  margin-bottom: 0px !important;
   min-height: 70px;
-  margin-top:15px;
+  margin-top: 26px;
+  margin-bottom: 7px !important;
 }
 
 .speaker-desc-small {
   font-family: 'Roboto Condensed', sans-serif;
-  font-size:10.5px;
+  font-size: 10.5px;
   /* Same size for all */
   line-height: 1.4;
   color: #000;
-  margin-bottom: 0px!important;
+  margin-bottom: 0px !important;
   min-height: 70px;
-  margin-top:15px;
+  margin-top: 15px;
 }
+
 .speaker-name {
   background: #C0C0C0;
-  color:#193F6F;
+  color: #193F6F;
   padding: 5px 15px;
   border-radius: 20px;
   display: inline-block;
   font-weight: bold;
-  margin-top:7px;
+  margin-top: 7px;
+  position: absolute;
+  bottom: 0;
+  left: 35%;
 }
 
 /* Equal height for all cards in a row */
@@ -258,14 +268,15 @@ html, body {
 
   .speaker-desc {
     font-size: 10px;
-    min-height:auto;
-    margin-top:10px;
-  }
-  .speaker-desc-small{
-    font-size:8px;
+    min-height: auto;
+    /* margin-top:10px; */
   }
 
-  .speaker-name{
+  .speaker-desc-small {
+    font-size: 8px;
+  }
+
+  .speaker-name {
     font-size: 8px;
   }
 }
@@ -351,14 +362,17 @@ html, body {
   color: #002d4d;
   font-weight: 500;
 }
-.explore-offering-section{
-  background: linear-gradient(to bottom, #4ac7e9, #193f6f); 
+
+.explore-offering-section {
+  background: linear-gradient(to bottom, #4ac7e9, #193f6f);
 }
-.explore-offering-card .equal-card{
+
+.explore-offering-card .equal-card {
   position: relative;
   min-height: 300px;
 }
-.explore-offering-card .icon{
+
+.explore-offering-card .icon {
   background-color: #fff;
   border-radius: 50%;
   width: 100px;
@@ -369,40 +383,44 @@ html, body {
   align-items: center;
   justify-content: center;
   position: absolute;
-  top:0px;
-  left:50%;
+  top: 0px;
+  left: 50%;
   transform: translate(-50%, -50%);
-  z-index:1
+  z-index: 1
 }
-.explore-offering-card h4{
-  margin-top:30px;
+
+.explore-offering-card h4 {
+  margin-top: 30px;
   z-index: 2;
-  font-size:30px;
-  color:#193F6F;
+  font-size: 30px;
+  color: #193F6F;
   font-family: 'Roboto Condensed', sans-serif;
 }
-.explore-offering-card p{
+
+.explore-offering-card p {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 20px;
   font-weight: 500;
   padding: 0px 20px;
 }
-.footer h6{
+
+.footer h6 {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 800;
   text-align: center;
-  color:rgba(25, 63, 111, 1);
+  color: rgba(25, 63, 111, 1);
   font-size: 18px;
   text-transform: uppercase;
 }
 
-.footer p{
+.footer p {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 600;
   text-align: center;
-  color:rgba(25, 63, 111, 1);
+  color: rgba(25, 63, 111, 1);
   font-size: 18px;
 }
+
 /* Responsive: Two in a row for large, one in a row for mobile */
 @media (min-width: 767px) {
   .row {
@@ -412,10 +430,15 @@ html, body {
 }
 
 @media (max-width: 767px) {
-  .download-box{
-    min-height: 10px;
-    height:auto!important;
+  .card-content {
+    min-height: 106.7px;
   }
+
+  .download-box {
+    min-height: 10px;
+    height: auto !important;
+  }
+
   .member-card {
     flex-direction: column;
     text-align: center;
@@ -423,9 +446,9 @@ html, body {
     /* Full width on mobile */
   }
 
-  .card-content{
+  .card-content {
     width: 80%;
-    left:50px;
+    left: 50px;
   }
 
   .logo-text {
@@ -440,8 +463,8 @@ html, body {
     border: 10px solid #193F6F;
     border-radius: 50%;
     /* max-width: 120px;  */
-    width: 100px;
-    height: 100px;
+    width: 110px;
+    height: 110px;
     object-fit: cover;
   }
 }
@@ -461,8 +484,9 @@ html, body {
     display: block;
     /* ensures margin applies */
   }
-  .explore-offering-card .equal-card{
-    margin-top:70px;
+
+  .explore-offering-card .equal-card {
+    margin-top: 70px;
   }
 
   .member-col {
@@ -473,6 +497,7 @@ html, body {
     width: 100%;
     margin-top: 10px;
   }
+
   .custom-card {
     /* max-width: 50%; */
   }
